traefik/nginx/nginx-middleware-strip-istanbul-prefix.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-istanbul-prefix
  namespace: ornek
spec:
  stripPrefix:
    prefixes:
      - "/istanbul/nginx"
